style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    height: 100vh;
    position: relative;
    display: flex;
    flex-direction: column;
    background: linear-gradient(50deg , #17305c  , #312a64 , #234277 , #383757);
    background-size: 300% 300%;
    animation: color 10s ease-in-out infinite;
    color: #fff;
}

@keyframes color{
    0%{
      background-position: 0 50%;
    }
    50%{
      background-position: 100% 50%;
    }
    100%{
      background-position: 0 50%;
    }
  }

h2 {
    font-family: 'Saira', sans-serif;
    font-size: xx-large;
    font-weight: 700;
    text-transform: uppercase;
    color: white;
    text-shadow: 0 0 1px transparent, 0 1px 2px rgb(0 0 0 / 50%);
    text-align: center; 
    white-space: nowrap;
}
body > img {
    object-fit: cover;
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
}
section {
    display: grid;
    place-items: center;
    position: absolute;
    inset: 0;
    overflow-y: scroll;
}
section div {
    display: flex;
    flex-direction: column;
    gap: 10px;
    width: 100%;
    max-width: 600px;
    margin: 0 auto;
    padding: 10px;
    justify-content: center;
    align-items: center;
    text-align: center; 
}
section > div {
    padding: 100px 10px;
}
section div img {
    width: 100px;
    aspect-ratio: 1;
    border-radius: 50%;
    box-shadow: 0 0 8px 1px lightblue;
}
a {
    display: flex;
    width: 100%;
    align-items: center;
    justify-content: center;
    border: 1.5px solid white;
    padding: 10px;
    color: white;
    text-decoration: none;
    gap: 20px;
    align-items: center;
    border-radius: 4px;
    transition-duration: 200ms;
}
a:hover {
    background: white;
    color: #0f172a;
    font-weight: bolder;
}
a i {
    font-size: 1.3em;
}
p {
    font-family: Arial, Helvetica, sans-serif;
}

/* width */
::-webkit-scrollbar {
    width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
    background: #bcbbbba6;
}
  
/* Handle */
::-webkit-scrollbar-thumb {
    background: #888;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #555;
}

.dynamic-text-container {
    text-align: center;
    font-size: 0.7em; 
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: -1.5rem;
}

.dynamic-text-container p {
    display: inline-block;
    margin: 0;
    font-family: "Patrick Hand", cursive;
    font-weight:500;
    font-size: 2em; 
}

.dynamic-text {
    font-weight: normal;
}

/* Center the name on smaller screens */
@media (max-width: 620px) {
    h2 {
        text-align: center;
        white-space: normal;
    }
    section div {
        align-items: center;
        text-align: center;
    }
}

